Fix the overflow

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ a {
 }
 
 .card {
-  overflow: hidder;
+  overflow: hidden;
   background-color: #d9ccaa;
   border-radius: 6px;
 }
